# rust-utils

./: CLAUDE.md  Cargo.toml  README.md
src/: backoff.rs  error.rs  lib.rs  secret.rs
src/concurrency/: mod.rs  shutdown.rs  supervisor.rs  throttle.rs  worker_pool.rs
src/network/: client.rs  mod.rs  rate_limit.rs  retry.rs  validation.rs
src/network/nats/: client.rs  config.rs  mod.rs
