[package]
name = "rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12"
governor = "0.7"
tokio = { version = "1", default-features = false, features = ["time", "sync", "rt"] }
thiserror = "2"
error-stack = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
http = "1"
