[package]
name = "rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12"
governor = "0.7"
tokio = { version = "1", default-features = false, features = ["time", "sync", "rt"] }
thiserror = "2"
error-stack = "0.5"
async-nats = { version = "0.47", default-features = false, features = ["server_2_10", "ring"] }
rustls = { version = "0.23", features = ["ring"] }
serde = "1"
serde_json = "1"
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
http = "1"
